# pico

./: Cargo.toml
src/: .config.rs.rustfmt  config.rs  document.rs  editor.rs  main.rs  row.rs  terminal.rs
