[package]
name = "pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
termion = "1"
toml = "0.8.10"
unicode-segmentation = "1"
serde = { version = "1.0.196", features = ["derive"] }
lazy_static = "1.4.0"
